Add logic, styles, order and show data

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -6,4 +6,5 @@
 
 /***************************************************** Imports Custom  *****************************************************/
 
-@import 'custom/generic.scss'
+@import 'custom/generic.scss';
+@import 'custom/button.scss'
