--- a/styles/sass/custom/generic.scss
+++ b/styles/sass/custom/generic.scss
@@ -13,7 +13,7 @@
 body {
     --sb-track-color: #fff;
     --sb-thumb-color: #0172ea;
-    --sb-size: 10px;
+    --sb-size: 8px;
   
     scrollbar-color: var(--sb-thumb-color) 
                      var(--sb-track-color);
@@ -34,4 +34,11 @@ body::-webkit-scrollbar-thumb {
     background: var(--sb-thumb-color);
     border-radius: 10px;
 
+}
+
+/*************************************************** IMAGES ***************************************************/
+
+.image-article{
+    width: auto;
+    width: auto;
 }
